--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "curve"
   ],
   "devDependencies": {
-    "mocha": "1.*",
-    "terst": "~0.1.0"
+    "mocha": "1.*"
   },
   "repository": {
     "url": "https://github.com/cryptocoinjs/coininfo",
