--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   ],
   "devDependencies": {
     "mocha": "1.*",
-    "mochify": "^2.1.1"
+    "mochify": "^2.1.1",
+    "standard": "3.x"
   },
   "repository": {
     "url": "https://github.com/cryptocoinjs/coininfo",
@@ -24,7 +25,7 @@
   },
   "main": "./lib/coininfo.js",
   "scripts": {
-    "test": "mocha",
+    "test": "standard && mocha",
     "browser-test": "mochify  --wd -R spec"
   }
 }
