--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "coininfo",
-  "version": "0.3.1",
+  "version": "0.4.0",
   "description": "JavaScript component for crypto currency specific information.",
   "keywords": [
     "cryptography",
@@ -12,7 +12,8 @@
     "curve",
     "dogecoin",
     "blackcoin",
-    "namecoin"
+    "namecoin",
+    "dash"
   ],
   "devDependencies": {
     "mocha": "1.*",
