Use package.json:files instead .npmignore

--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "type": "git"
   },
   "main": "./lib/coininfo.js",
+  "files": [
+    "lib"
+  ],
   "scripts": {
     "lint": "standard",
     "test": "npm run lint && npm run unit",
