Added vtc.js, and VTC (vertcoin) support.

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "namecoin",
     "dash",
     "monacoin",
-    "zcash"
+    "zcash",
+    "vertcoin"
   ],
   "devDependencies": {
     "standard": "*",
