--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "coininfo",
-  "version": "5.1.0",
+  "version": "5.2.0",
   "description": "JavaScript component for crypto currency specific information.",
   "license": "MIT",
   "keywords": [
@@ -18,6 +18,7 @@
     "namecoin",
     "dash",
     "monacoin",
+    "smartcryptotech",
     "zcash",
     "vertcoin",
     "qtum"
